--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,7 @@ body {
   background: linear-gradient(to bottom right, #ffe0d1, #ffffff);
   background-attachment: fixed;
   background-size: cover;
+  width: 100%;
+  height: 100%;
+
 }
